--- a/public/wp-content/themes/blackrock/scss/modules/_card_carousel.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_card_carousel.scss
@@ -1,6 +1,11 @@
 .card-carousel {
-    .slide {
-        width: 25%;
-        float: left;
+    margin-bottom: calc(100vw / 12);
+
+    h3 {
+        @include headline-20;
+    }
+
+    p {
+        @include body-20;
     }
 }
