--- a/public/wp-content/themes/blackrock/scss/style.scss
+++ b/public/wp-content/themes/blackrock/scss/style.scss
@@ -12,6 +12,7 @@
 @import "elements/_modal.scss";
 
 @import "modules/_card_carousel.scss";
+@import "modules/_page_reveal_slicing.scss";
 @import "modules/_copy_two_images.scss";
 @import "modules/_floors.scss";
 @import "modules/_contact.scss";
@@ -20,6 +21,7 @@
 @import "modules/_image_carousel.scss";
 @import "modules/_keep_exploring.scss";
 @import "modules/_map.scss";
+@import "modules/_timeline.scss";
 @import "modules/_modal_popup.scss";
 @import "modules/_one_col_copy_image.scss";
 @import "modules/_title_multiple_columns.scss";
