--- a/public/wp-content/themes/blackrock/scss/layout/_general.scss
+++ b/public/wp-content/themes/blackrock/scss/layout/_general.scss
@@ -15,3 +15,31 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+body {
+  &.page-cream {
+    background-color: $br-cream;
+  }
+  &.page-black {
+    background-color: $br-black;
+
+    color: $br-white;
+  }
+  &.page-white {
+    background-color: $br-white;
+  }
+}
+
+blockquote {
+  padding: 0;
+  margin: 0;
+}
+
+.caption {
+  
+  p {
+      padding: 10px 0 0 0;
+      margin: 0;
+      @include body-20;
+  }
+}
