--- a/public/wp-content/themes/blackrock/scss/modules/_contact.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_contact.scss
@@ -4,32 +4,75 @@
     left: 0;
     background-color: #000000;
     width: 100vw;
-    height: calc(100vh - 60px);
+    height: 100vh;
     transform: translateX(100vw);
+    transition: all 0.3s ease 0.3s;
     z-index: 1000;
     color: #FFFFFF;
     overflow-x: hidden;
     overflow-y: scroll;
+    padding-top: calc(100vw / 12);
+
+    #close-contact {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 2;
+    }
+
+    .footer-bg {
+        height: 80px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100vw;
+        background-color: $br-blue;
+    }
 
     .contacts-container {
         @include grid;
-        grid-template-columns: repeat(12, 1fr);
+        grid-template-columns: 6fr 1fr 5fr;
         
         @media #{$mq-desk-small}{
-            grid-template-areas: "contacts contacts contacts contacts contacts contacts . img img img img img";
+            grid-template-areas: "contacts . img ";
         }
 
         .left {
             @include grid;
             grid-area: contacts;
             margin: 0 !important;
+            padding-top: calc(100vw / 12);
+
+            h2 {
+                @include headline-50;
+                padding-bottom: calc(100vw / 24);
+            }
         }
 
         .contacts {
             @include grid;
-            
+            padding-top: calc(100vw / 24);
             margin: 0 !important;
             grid-template-columns: repeat(3, 1fr);
+
+            .contact {
+                border-top: 2px solid white;
+                margin-bottom: 20px;
+                @include body-20;
+
+                h3, h4 {
+                    @include body-20;
+                }
+
+                h3 {
+                    margin-bottom: 0;
+                    padding-bottom: 0;
+                }
+
+                h4 {
+                    margin-top: 0;
+                }
+            }
         }
 
         .image-container {
