--- a/public/wp-content/themes/blackrock/scss/modules/_two_col_sticky.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_two_col_sticky.scss
@@ -1,13 +1,21 @@
 .two-col-sticky {
     @include grid;
-
+    
     @media #{$mq-mobile}{
-        grid-template-columns: 1fr 1fr;
+        margin: 0px 40px calc(100vw / 12) 40px;
+        grid-template-columns: 5fr 1fr 6fr;
+        grid-template-areas: "left . right";
     }  
 
     .left {
         position: relative;
+        grid-area: left;
         
+        h2 {
+            @include headline-50;
+            margin-top: 0;
+        }
+
         .stick {
             position: sticky;
             top: 0;
@@ -15,9 +23,35 @@
     }
 
     .right {
+        grid-area: right;
+        
+        h3 {
+            @include body-20;
+            font-weight: bold;
+            margin-top: 0;
+        }
+
+        p {
+            @include body-20;
+        }
 
         .button {
             float: right;
+        }
+
+        article {
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            margin-bottom: 40px;
+
+            .number {
+                min-width: 100px;
+                padding-right: 40px;
+                @include headline-50;
+                font-weight: normal;
+                line-height: 0.9em;
+            }
         }
     }
 }
